# phase_congruency

./: CMakeLists.txt  README.md
example/: src.hex  src1.hex  src2.hex  test2.hex
src/: file_dir.cpp  file_dir.h  main.cpp  mapbeautif.cpp  mapbeautif.h  phase.cpp  phase.h
